Reconcile the invoice-search contract against billing-service's real shape
Written against an assumed contract before billing-service existed, this
service expected a {"invoices": [...]} wrapper with an amountCents field.
billing-service actually answers with a bare array and calls the field
amountOwedCents, so every real search call was failing to deserialize and
falling back to "billing-service unreachable" - caught by running the two
services against each other for the first time.